--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="ms-3 my-3">
-               <strong> Product id: <span id="productId"></span> </strong>
+               <strong> Product id: <span id="product_id"></span> </strong>
             </div>
 
             <div class="modal-body text-secondary" id="modal_body"></div>
